// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Pickup in Store schematics: ng-add Pick Up In Store feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { PickupInStoreModule } from "@spartacus/pickup-in-store";
import { pickupInStoreTranslationChunksConfig, pickupInStoreTranslationsEn } from "@spartacus/pickup-in-store/assets";
import { PickupInStoreRootModule } from "@spartacus/pickup-in-store/root";

@NgModule({
  declarations: [],
  imports: [
    PickupInStoreRootModule,
    PickupInStoreModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: pickupInStoreTranslationsEn },
      chunks: pickupInStoreTranslationChunksConfig,
    },
  })]
})
export class PickupInStoreFeatureModule { }
"
`;

exports[`Spartacus Pickup in Store schematics: ng-add Pick Up In Store feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { pickupInStoreTranslationChunksConfig, pickupInStoreTranslationsEn } from "@spartacus/pickup-in-store/assets";
import { PICKUP_IN_STORE_FEATURE, PickupInStoreRootModule } from "@spartacus/pickup-in-store/root";

@NgModule({
  declarations: [],
  imports: [
    PickupInStoreRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [PICKUP_IN_STORE_FEATURE]: {
        module: () =>
          import('@spartacus/pickup-in-store').then((m) => m.PickupInStoreModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: pickupInStoreTranslationsEn },
      chunks: pickupInStoreTranslationChunksConfig,
    },
  })
  ]
})
export class PickupInStoreFeatureModule { }
"
`;

exports[`Spartacus Pickup in Store schematics: ng-add Pick Up In Store feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/pickup-in-store";
@import "@spartacus/styles/vendor/bootstrap/scss/functions";
@import "@spartacus/styles/vendor/bootstrap/scss/variables";
@import "@spartacus/styles/vendor/bootstrap/scss/_mixins";
"
`;

exports[`Spartacus Pickup in Store schematics: ng-add Pick Up In Store feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false,
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "standalone": false,
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:pipe": {
          "standalone": false,
          "typeSeparator": "."
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/pickup-in-store.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/pickup-in-store.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
